Fixed slow scrolling; http://stackoverflow.com/questions/27751511/poor-performance-of-fixed-position-elements http://benfrain.com/improving-css-performance-fixed-position-elements/

--- a/css/global.css
+++ b/css/global.css
@@ -17,11 +17,12 @@ body {
 }
 
 #menu {
-  background: rgba(0,0,0,0.7);
+  background: rgba(0,0,0,0.5);
+  -webkit-backface-visibility: hidden;
 }
 
 #menu a.active {
-  color: white;
+  -webkit-backface-visibility: hidden;
 }
 
 .header {
